fix sponsor img overflow

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,28 @@
   padding: 5vmin;
 }
 
+@media screen and (max-width: 1024px) {
+  #sponsors .sponsor {
+    height: 10vmin;
+  }
+  
+  #sponsors .sponsor-wide {
+    width: 30vmin;
+    padding: 5vmin;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #sponsors .sponsor {
+    height: 20vmin;
+  }
+  
+  #sponsors .sponsor-wide {
+    width: 50vmin;
+    padding: 5vmin;
+  }
+}
+
 .s-container {
   width: 100%;
 }
